[package]
name = "seal"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
aes-gcm = "0.10.3"
rand = "0.8.5"
argon2 = "0.5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4.0"
rpassword = "7.3.1"
anyhow = "1.0.80"
base64 = "0.21.7"

[dev-dependencies]
tempfile = "3.10.1"
