[package]
name = "seal"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.75"
argon2 = "0.5.2"
base64 = "0.21.5"
clap = { version = "4.4.11", features = ["derive"] }
indicatif = "0.17.7"
nanoid = "0.4.0"
rand = "0.8.5"
rpassword = "7.3.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
shell-escape = "0.1.5"
tempfile = "3.8.1"
uuid = { version = "1.6.1", features = ["v4"] }
walkdir = "2.4.0"
lazy_static = "1.4.0"
webauthn-rs = "0.4.8"

[dev-dependencies]
tempfile = "3.10.1"
lazy_static = "1.4.0"
scopeguard = "1.2.0"
